--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -16,8 +16,18 @@
         <p:growl id="growl" life="3000" />
 
         <p:layout fullPage="true">
-            <p:layoutUnit position="north" size="65" header="#{bundle.AppName}">
+            <p:layoutUnit position="north" size="135" header="#{bundle.AppName}">
                 <h:form id="menuForm">
+                    
+                    <h:commandLink actionListener="#{movDetController.prepareCreate()}" action="/factura/List.xhtml" >
+                        <p:graphicImage id="Sale"
+                                  value="/resources/img/cart-icon.png"
+                                  width="150"
+                                  height="90">
+                        </p:graphicImage>
+                    </h:commandLink>
+                </h:form>   
+               <!-- <h:form id="menuForm">
                     <p:menubar>
                         <p:menuitem value="#{bundle.Home}" outcome="/index" icon="ui-icon-home"/>
                         <p:submenu label="#{bundle.Maintenance}">
@@ -27,6 +37,8 @@
                         </p:submenu>
                     </p:menubar>
                 </h:form>
+               -->
+               
             </p:layoutUnit>
 
             <p:layoutUnit position="south" size="60">
