--- a/web/movDet/List.xhtml
+++ b/web/movDet/List.xhtml
@@ -63,7 +63,7 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListMovDetTitle_subTotal}"/>
                             </f:facet>
-                            <h:outputText value="#{item.subTotal}"/>
+                            <h:outputText value="#{item.precio}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
