--- a/web/factura/List.xhtml
+++ b/web/factura/List.xhtml
@@ -18,7 +18,7 @@
             <h:form id="MovDetCreateForm">                
                 <h:panelGroup id="display">                   
                     <center>        
-                        <p:panelGrid columns="6" rendered="#{movDetController.selected != null}">                        
+                        <p:panelGrid columns="6" >                        
                             <p:outputLabel value="#{bundle.CreateMovDetLabel_cantidad}" for="cantidad" />
                             <p:inputText id="cantidad" value="#{movDetController.selected.cantidad}" title="#{bundle.CreateMovDetTitle_cantidad}" />
                             <p:outputLabel value="#{bundle.CreateMovDetLabel_codProd}" for="codProd" />
@@ -76,7 +76,8 @@
                     </p:dataTable>
                     <div align="right" style="width:100% " >
                         <p:panelGrid columns="3">
-                        <p:commandButton id="Pagar"   icon="ui-icon-cart"  value="Pagar" update=":formaPagoForm" oncomplete="PF('facturaFormaPagoDlg').show()"  />                             
+                            <p:commandButton id="Pagar"   rendered="#{movDetController.lmovdet!=null}" icon="ui-icon-cart"  value="Pagar" update=":formaPagoForm" oncomplete="PF('facturaFormaPagoDlg').show()"  />                             
+                        <p:commandButton id="Cancelar"   rendered="#{movDetController.lmovdet!=null}" icon="ui-icon-close"  value="Cancelar" update="@form" actionListener="#{movDetController.limpiar()}"  />                             
                             <h:outputText value="Total" style="font-weight: bold;  font-size: 16px" />
                              <h:outputText value="#{movDetController.vtotal}">
                     <f:convertNumber type="currency" currencySymbol="$" />
